--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,19 @@
 <mat-toolbar color="primary">
   <span> angular-material-moment-jalali-hijri-adapter </span>
+
+  <div style="flex: 1 1 auto"></div>
+
+  <a
+    mat-icon-button
+    matTooltip="Github"
+    href="https://github.com/mohsen77sk/angular-material-moment-jalali-hijri-adapter"
+  >
+    <img
+      src="./assets/icons/github-circle-white-transparent.svg"
+      width="24"
+      height="24"
+    />
+  </a>
 </mat-toolbar>
 
 <main>
